# swarm-eval-qwen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/eval/: metrics.yaml
configs/eval/suites/: cre_adversarial.yaml  cre_core.yaml  cre_edges.yaml
configs/models/swarmjudge-2b-cre-b0/: phase1.yaml  sampling.yaml
configs/models/swarmjudge-4b-cre-b0/: phase1.yaml  sampling.yaml
configs/models/swarmjudge-9b-cre-b0/: phase1.yaml  phase2.yaml  phase3.yaml  sampling.yaml  tokenizer.yaml
data_contract/schema/: evalcase.schema.json  pair.schema.json
data_contract/validators/: validate_pairs.py
datasets/: README.md
datasets/manifests/swarmjudge-9b-cre-b0/: phase2.manifest.json  phase3.manifest.json
docs/: 00-overview.md  10-block0-process.md  20-data-contract.md  30-eval-harness.md  40-release-process.md  50-incident-playbook.md
evalsets/cre/: README.md
provenance/runs/swarmjudge-2b-cre-b0/phase1/: provenance.json
provenance/runs/swarmjudge-4b-cre-b0/phase1/: provenance.json
provenance/runs/swarmjudge-9b-cre-b0/: cost_ledger.json
provenance/runs/swarmjudge-9b-cre-b0/phase2/: provenance.json
provenance/templates/: provenance.template.json
results/swarmjudge-2b-cre-b0/phase1/gate_bench/: metrics.json
scripts/: 01_make_manifest.sh  02_validate_data.sh  03_train_phase.sh  04_merge.sh  05_eval.sh  06_regression_gate.sh  07_release_pack.sh
src/swarmeval/: __init__.py
src/swarmeval/eval/: regression.py  run_eval.py  score.py
src/swarmeval/utils/: hashing.py  seeds.py  tokens.py
